; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/accel/extr_sca3000.c_sca3000_read_data_short.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/accel/extr_sca3000.c_sca3000_read_data_short.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sca3000_state = type { i32, i32*, i32 }
%struct.spi_transfer = type { i32, i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sca3000_state*, i32, i32)* @sca3000_read_data_short to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sca3000_read_data_short(%struct.sca3000_state* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.sca3000_state*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca [2 x %struct.spi_transfer], align 16
  store %struct.sca3000_state* %0, %struct.sca3000_state** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = getelementptr inbounds [2 x %struct.spi_transfer], [2 x %struct.spi_transfer]* %7, i64 0, i64 0
  %9 = getelementptr inbounds %struct.spi_transfer, %struct.spi_transfer* %8, i32 0, i32 0
  store i32 1, i32* %9, align 16
  %10 = getelementptr inbounds %struct.spi_transfer, %struct.spi_transfer* %8, i32 0, i32 1
  store i32 0, i32* %10, align 4
  %11 = getelementptr inbounds %struct.spi_transfer, %struct.spi_transfer* %8, i32 0, i32 2
  %12 = load %struct.sca3000_state*, %struct.sca3000_state** %4, align 8
  %13 = getelementptr inbounds %struct.sca3000_state, %struct.sca3000_state* %12, i32 0, i32 1
  %14 = load i32*, i32** %13, align 8
  store i32* %14, i32** %11, align 8
  %15 = getelementptr inbounds %struct.spi_transfer, %struct.spi_transfer* %8, i64 1
  %16 = getelementptr inbounds %struct.spi_transfer, %struct.spi_transfer* %15, i32 0, i32 0
  %17 = load i32, i32* %6, align 4
  store i32 %17, i32* %16, align 16
  %18 = getelementptr inbounds %struct.spi_transfer, %struct.spi_transfer* %15, i32 0, i32 1
  %19 = load %struct.sca3000_state*, %struct.sca3000_state** %4, align 8
  %20 = getelementptr inbounds %struct.sca3000_state, %struct.sca3000_state* %19, i32 0, i32 2
  %21 = load i32, i32* %20, align 8
  store i32 %21, i32* %18, align 4
  %22 = getelementptr inbounds %struct.spi_transfer, %struct.spi_transfer* %15, i32 0, i32 2
  store i32* null, i32** %22, align 8
  %23 = load i32, i32* %5, align 4
  %24 = call i32 @SCA3000_READ_REG(i32 %23)
  %25 = load %struct.sca3000_state*, %struct.sca3000_state** %4, align 8
  %26 = getelementptr inbounds %struct.sca3000_state, %struct.sca3000_state* %25, i32 0, i32 1
  %27 = load i32*, i32** %26, align 8
  %28 = getelementptr inbounds i32, i32* %27, i64 0
  store i32 %24, i32* %28, align 4
  %29 = load %struct.sca3000_state*, %struct.sca3000_state** %4, align 8
  %30 = getelementptr inbounds %struct.sca3000_state, %struct.sca3000_state* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 8
  %32 = getelementptr inbounds [2 x %struct.spi_transfer], [2 x %struct.spi_transfer]* %7, i64 0, i64 0
  %33 = getelementptr inbounds [2 x %struct.spi_transfer], [2 x %struct.spi_transfer]* %7, i64 0, i64 0
  %34 = call i32 @ARRAY_SIZE(%struct.spi_transfer* %33)
  %35 = call i32 @spi_sync_transfer(i32 %31, %struct.spi_transfer* %32, i32 %34)
  ret i32 %35
}

declare dso_local i32 @SCA3000_READ_REG(i32) #1

declare dso_local i32 @spi_sync_transfer(i32, %struct.spi_transfer*, i32) #1

declare dso_local i32 @ARRAY_SIZE(%struct.spi_transfer*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
